[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/stage/stage_column.gd" type="Script" id=1]
[ext_resource path="res://addons/tilth_project_tracker/tilth/scenes/stage/stage_column_header.gd" type="Script" id=2]
[ext_resource path="res://addons/tilth_project_tracker/tilth/themes/light/theme_light.tres" type="Theme" id=3]
[ext_resource path="res://addons/tilth_project_tracker/tilth/themes/light/panel-material-gray-light.tres" type="StyleBox" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.501961, 0.556863, 0.584314, 1 )

[node name="StageColumn" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_styles/panel = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VLayout" type="VBoxContainer" parent="."]
margin_right = 1366.0
margin_bottom = 768.0

[node name="ColumnHeader" type="PanelContainer" parent="VLayout"]
margin_right = 1366.0
margin_bottom = 39.0
mouse_filter = 1
mouse_default_cursor_shape = 6
custom_styles/panel = SubResource( 2 )
script = ExtResource( 2 )

[node name="Padding" type="MarginContainer" parent="VLayout/ColumnHeader"]
margin_right = 1366.0
margin_bottom = 39.0
mouse_filter = 1
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HLayout" type="HBoxContainer" parent="VLayout/ColumnHeader/Padding"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1361.0
margin_bottom = 34.0

[node name="StageTitle" type="LineEdit" parent="VLayout/ColumnHeader/Padding/HLayout"]
margin_right = 651.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="SaveStage" type="Button" parent="VLayout/ColumnHeader/Padding/HLayout"]
margin_left = 655.0
margin_right = 700.0
margin_bottom = 29.0
text = "Save"

[node name="AddStageContainer" type="HBoxContainer" parent="VLayout/ColumnHeader/Padding/HLayout"]
margin_left = 704.0
margin_right = 1356.0
margin_bottom = 29.0
size_flags_horizontal = 3
alignment = 2

[node name="AddStageButton" type="Button" parent="VLayout/ColumnHeader/Padding/HLayout/AddStageContainer"]
margin_left = 584.0
margin_right = 652.0
margin_bottom = 29.0
grow_horizontal = 0
text = "+ Stage"

[node name="Scroll" type="ScrollContainer" parent="VLayout"]
margin_top = 43.0
margin_right = 1366.0
margin_bottom = 768.0
size_flags_vertical = 3
theme = ExtResource( 3 )
scroll_horizontal_enabled = false

[node name="Padding" type="MarginContainer" parent="VLayout/Scroll"]
margin_right = 1366.0
margin_bottom = 86.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Column" type="VBoxContainer" parent="VLayout/Scroll/Padding"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1356.0
margin_bottom = 76.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TaskRows" type="VBoxContainer" parent="VLayout/Scroll/Padding/Column"]
margin_right = 1346.0

[node name="AddTaskContainer" type="HBoxContainer" parent="VLayout/Scroll/Padding/Column"]
margin_top = 4.0
margin_right = 1346.0
margin_bottom = 33.0
size_flags_horizontal = 3
alignment = 2

[node name="AddTaskButton" type="Button" parent="VLayout/Scroll/Padding/Column/AddTaskContainer"]
margin_left = 1285.0
margin_right = 1346.0
margin_bottom = 29.0
grow_horizontal = 0
text = "+ Task"

[node name="DeleteStageButton" type="Button" parent="VLayout/Scroll/Padding/Column"]
margin_top = 37.0
margin_right = 113.0
margin_bottom = 66.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = " delete stage "
